versions/GNDS-v2.0/GNDS/c/src/v2.0/top/ReactionSuite.h

// --- Const-aware handles.
typedef const struct ReactionSuiteClass *const ConstHandle2ConstReactionSuite;
typedef       struct ReactionSuiteClass *const ConstHandle2ReactionSuite;
// -----------------------------------------------------------------------------
// Child: fissionComponents
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteFissionComponentsHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstFissionComponents
ReactionSuiteFissionComponentsGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2FissionComponents
ReactionSuiteFissionComponentsGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteFissionComponentsSet(ConstHandle2ReactionSuite self, ConstHandle2ConstFissionComponents fissionComponents);
// -----------------------------------------------------------------------------
// Child: orphanProducts
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteOrphanProductsHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstOrphanProducts
ReactionSuiteOrphanProductsGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2OrphanProducts
ReactionSuiteOrphanProductsGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteOrphanProductsSet(ConstHandle2ReactionSuite self, ConstHandle2ConstOrphanProducts orphanProducts);
// -----------------------------------------------------------------------------
// Child: incompleteReactions
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteIncompleteReactionsHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstIncompleteReactions
ReactionSuiteIncompleteReactionsGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2IncompleteReactions
ReactionSuiteIncompleteReactionsGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteIncompleteReactionsSet(ConstHandle2ReactionSuite self, ConstHandle2ConstIncompleteReactions incompleteReactions);