versions/GNDS-v2.0/GNDS/fortran/src/v2.0/top/ReactionSuite.f03


!! -----------------------------------------------------------------------------
!! Child: fissionComponents
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteFissionComponentsHas(handle) &
      bind(C, name='ReactionSuiteFissionComponentsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteFissionComponentsHas

!! Get, const
function ReactionSuiteFissionComponentsGetConst(handle) &
      bind(C, name='ReactionSuiteFissionComponentsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteFissionComponentsGetConst

!! Get
function ReactionSuiteFissionComponentsGet(handle) &
      bind(C, name='ReactionSuiteFissionComponentsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteFissionComponentsGet

!! Set
subroutine ReactionSuiteFissionComponentsSet(handle, fieldHandle) &
      bind(C, name='ReactionSuiteFissionComponentsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuiteFissionComponentsSet


!! -----------------------------------------------------------------------------
!! Child: orphanProducts
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteOrphanProductsHas(handle) &
      bind(C, name='ReactionSuiteOrphanProductsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteOrphanProductsHas

!! Get, const
function ReactionSuiteOrphanProductsGetConst(handle) &
      bind(C, name='ReactionSuiteOrphanProductsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteOrphanProductsGetConst

!! Get
function ReactionSuiteOrphanProductsGet(handle) &
      bind(C, name='ReactionSuiteOrphanProductsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteOrphanProductsGet

!! Set
subroutine ReactionSuiteOrphanProductsSet(handle, fieldHandle) &
      bind(C, name='ReactionSuiteOrphanProductsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuiteOrphanProductsSet


!! -----------------------------------------------------------------------------
!! Child: incompleteReactions
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteIncompleteReactionsHas(handle) &
      bind(C, name='ReactionSuiteIncompleteReactionsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteIncompleteReactionsHas

!! Get, const
function ReactionSuiteIncompleteReactionsGetConst(handle) &
      bind(C, name='ReactionSuiteIncompleteReactionsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteIncompleteReactionsGetConst

!! Get
function ReactionSuiteIncompleteReactionsGet(handle) &
      bind(C, name='ReactionSuiteIncompleteReactionsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteIncompleteReactionsGet

!! Set
subroutine ReactionSuiteIncompleteReactionsSet(handle, fieldHandle) &
      bind(C, name='ReactionSuiteIncompleteReactionsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuiteIncompleteReactionsSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module topReactionSuite
